--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
